Source/WebKit/UIProcess/Cocoa/WebPasteboardProxyCocoa.mm
@@ -30,6 +30,7 @@
 #import "SandboxExtension.h"
 #import "WebPageProxy.h"
 #import "WebPreferences.h"
+#import "WebProcessMessages.h"
 #import "WebProcessProxy.h"
 #import <WebCore/Color.h>
 #import <WebCore/Pasteboard.h>
@@ -453,6 +454,8 @@ void WebPasteboardProxy::writeURLToPasteboard(IPC::Connection& connection, const
     auto previousChangeCount = PlatformPasteboard(pasteboardName).changeCount();
     PlatformPasteboard(pasteboardName).write(url);
     didModifyContentsOfPasteboard(connection, pasteboardName, previousChangeCount, PlatformPasteboard(pasteboardName).changeCount());
+    if (auto process = webProcessProxyForConnection(connection))
+        process->send(Messages::WebProcess::DidWriteToPasteboardAsynchronously(pasteboardName), 0);
 }
 
 void WebPasteboardProxy::writeWebContentToPasteboard(IPC::Connection& connection, const WebCore::PasteboardWebContent& content, const String& pasteboardName)
@@ -462,6 +465,8 @@ void WebPasteboardProxy::writeWebContentToPasteboard(IPC::Connection& connection
     auto previousChangeCount = PlatformPasteboard(pasteboardName).changeCount();
     PlatformPasteboard(pasteboardName).write(content);
     didModifyContentsOfPasteboard(connection, pasteboardName, previousChangeCount, PlatformPasteboard(pasteboardName).changeCount());
+    if (auto process = webProcessProxyForConnection(connection))
+        process->send(Messages::WebProcess::DidWriteToPasteboardAsynchronously(pasteboardName), 0);
 }
 
 void WebPasteboardProxy::writeImageToPasteboard(IPC::Connection& connection, const WebCore::PasteboardImage& pasteboardImage, const String& pasteboardName)
@@ -471,6 +476,8 @@ void WebPasteboardProxy::writeImageToPasteboard(IPC::Connection& connection, con
     auto previousChangeCount = PlatformPasteboard(pasteboardName).changeCount();
     PlatformPasteboard(pasteboardName).write(pasteboardImage);
     didModifyContentsOfPasteboard(connection, pasteboardName, previousChangeCount, PlatformPasteboard(pasteboardName).changeCount());
+    if (auto process = webProcessProxyForConnection(connection))
+        process->send(Messages::WebProcess::DidWriteToPasteboardAsynchronously(pasteboardName), 0);
 }
 
 void WebPasteboardProxy::writeStringToPasteboard(IPC::Connection& connection, const String& pasteboardType, const String& text, const String& pasteboardName)
@@ -481,6 +488,8 @@ void WebPasteboardProxy::writeStringToPasteboard(IPC::Connection& connection, co
     auto previousChangeCount = PlatformPasteboard(pasteboardName).changeCount();
     PlatformPasteboard(pasteboardName).write(pasteboardType, text);
     didModifyContentsOfPasteboard(connection, pasteboardName, previousChangeCount, PlatformPasteboard(pasteboardName).changeCount());
+    if (auto process = webProcessProxyForConnection(connection))
+        process->send(Messages::WebProcess::DidWriteToPasteboardAsynchronously(pasteboardName), 0);
 }
 
 void WebPasteboardProxy::updateSupportedTypeIdentifiers(const Vector<String>& identifiers, const String& pasteboardName)
