Source/WebKit/WebProcess/WebCoreSupport/WebPlatformStrategies.cpp
@@ -170,6 +170,7 @@ Vector<String> WebPlatformStrategies::allStringsForType(const String& pasteboard
 int64_t WebPlatformStrategies::changeCount(const String& pasteboardName)
 {
     int64_t changeCount { 0 };
+    WebProcess::singleton().waitForPendingPasteboardWritesToFinish(pasteboardName);
     WebProcess::singleton().parentProcessConnection()->sendSync(Messages::WebPasteboardProxy::GetPasteboardChangeCount(pasteboardName), Messages::WebPasteboardProxy::GetPasteboardChangeCount::Reply(changeCount), 0);
     return changeCount;
 }
@@ -265,21 +266,25 @@ String WebPlatformStrategies::urlStringSuitableForLoading(const String& pasteboa
 
 void WebPlatformStrategies::writeToPasteboard(const PasteboardURL& url, const String& pasteboardName)
 {
+    WebProcess::singleton().willWriteToPasteboardAsynchronously(pasteboardName);
     WebProcess::singleton().parentProcessConnection()->send(Messages::WebPasteboardProxy::WriteURLToPasteboard(url, pasteboardName), 0);
 }
 
 void WebPlatformStrategies::writeToPasteboard(const WebCore::PasteboardWebContent& content, const String& pasteboardName)
 {
+    WebProcess::singleton().willWriteToPasteboardAsynchronously(pasteboardName);
     WebProcess::singleton().parentProcessConnection()->send(Messages::WebPasteboardProxy::WriteWebContentToPasteboard(content, pasteboardName), 0);
 }
 
 void WebPlatformStrategies::writeToPasteboard(const WebCore::PasteboardImage& image, const String& pasteboardName)
 {
+    WebProcess::singleton().willWriteToPasteboardAsynchronously(pasteboardName);
     WebProcess::singleton().parentProcessConnection()->send(Messages::WebPasteboardProxy::WriteImageToPasteboard(image, pasteboardName), 0);
 }
 
 void WebPlatformStrategies::writeToPasteboard(const String& pasteboardType, const String& text, const String& pasteboardName)
 {
+    WebProcess::singleton().willWriteToPasteboardAsynchronously(pasteboardName);
     WebProcess::singleton().parentProcessConnection()->send(Messages::WebPasteboardProxy::WriteStringToPasteboard(pasteboardType, text, pasteboardName), 0);
 }
 
